--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Hello HTML!</h1>
     <p>Some text</p>
-    <img src="/img/bird-thumbnail.jpg" alt="bird-thumbnail">
+    <img src="img/bird-thumbnail.jpg" alt="bird-thumbnail">
 </body>
 
 </html>
